examples/v1.0.0/commons/convert/ts/invalid/convert.receipt.invalid.2.ts
// INVALID convert.receipt #2 — missing result when status=success

export const convertReceiptInvalid2: any = {
  x402: {
    verb: "convert",
    version: "1.0.0",
    request_id: "req-convert-2025-11-19-0005"
  },
  trace: {
    trace_id: "trace-convert-0005"
  },
  status: "success"
};
